index2 and style2 created

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="container">
         <h1 id="title">NET<span id="flix">FLİX</span></h1>
-        <p id="description">Thank you for signing up at Netflix. Tell us more about your self</p>
+        <p id="description">Thank you for signing up at Netflix. Tell us more about yourself.</p>
         <form action="result.html" >
             <div class="box">
                 <label for="name">Name</label><br>
