--- a/index2.html
+++ b/index2.html
@@ -31,8 +31,8 @@
       <section id="survey-form-container">
         <div id="survey-form">
           <form action="result.html" target="_blank">
-            <div>
-              <label for="name">Name</label>
+            <div class="input-box">
+              <label for="name">Name</label><br>
               <input
                 type="text"
                 name="Name"
@@ -40,12 +40,12 @@
                 placeholder="Enter your name..."
               />
             </div>
-            <div>
-              <label for="age">Age</label>
+            <div class="input-box">
+              <label for="age">Age</label><br>
               <input type="number" name="Age" id="age" placeholder="Age" />
             </div>
-            <div>
-              <label for="email">Email</label>
+            <div class="input-box">
+              <label for="email">Email</label><br>
               <input
                 type="email"
                 name="Email"
@@ -53,53 +53,53 @@
                 placeholder="Enter your email..."
               />
             </div>
-            <div>
-              <label for="dropdown">Content Type</label>
+            <div class="input-box">
+              <label for="dropdown">Content Type</label><br>
               <select name="Content_type" id="dropdown">
                 <option value="Movie">Movie</option>
                 <option value="Series" selected>Series</option>
               </select>
             </div>
-            <div>
-              <label>Movie Type</label>
+            <div class="input-box">
+              <label>Movie Type</label><br>
               <input
                 type="checkbox"
                 name="Movie1"
                 id="fist-check"
                 value="comedy"
               />
-              <label for="firtst-check">Comedy</label>
+              <label for="firtst-check">Comedy</label><br>
               <input
                 type="checkbox"
                 name="Movie2"
                 id="second-check"
                 value="action"
               />
-              <label for="second-check">Action</label>
+              <label for="second-check">Action</label><br>
               <input
                 type="checkbox"
                 name="Movie1"
                 id="third-check"
                 value="romance"
               />
-              <label for="third-check">Romance</label>
+              <label for="third-check">Romance</label><br>
             </div>
-            <div>
-              <label>Gender</label>
+            <div class="input-box">
+              <label>Gender</label><br>
               <input type="radio" name="gender" id="gender1" value="male" />
-              <label for="gender1">Male</label>
+              <label for="gender1">Male</label><br>
 
               <input type="radio" name="gender" id="gender2" value="female" />
-              <label for="gender2">Female</label>
+              <label for="gender2">Female</label><br>
 
               <input type="radio" name="gender" id="gender3" value="other" />
-              <label for="gender3">Other</label>
+              <label for="gender3">Other</label><br>
             </div>
-            <div>
-              <label>Feedback</label>
+            <div class="input-box">
+              <label>Feedback</label><br>
               <textarea
                 name="feedback"
-                id="feadback"
+                id="feedback"
                 cols="30"
                 rows="10"
                 placeholder="Any comment here..."
